bk_ida/gccida/c3/gen_formal_types_die
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_formal_types_die/src/dwarf2out.c:10523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_formal_types_die/src/dwarf2out.c:10548:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)v4[2]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_formal_types_die/src/dwarf2out.c:10621:20: error: expected expression
v13 = ( tree_node *)i[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_formal_types_die/src/dwarf2out.c:10621:9: error: use of undeclared identifier 'tree_node'
v13 = ( tree_node *)i[4]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_formal_types_die/src/obj/dwarf2out.o] Error 1
